--- a/backend/package.json
+++ b/backend/package.json
@@ -8,8 +8,12 @@
     "@testing-library/user-event": "^13.5.0",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "jest": "^27.5.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.0",
+    "prettier": "^2.8.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -38,5 +42,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^8.33.0",
+    "supertest": "^6.3.3"
   }
 }
