--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-MONGODB_ATLAS_URI=mongodb+srv://Tengis:Qweasdzxc2007@cluster0.rqv9oyq.mongodb.net/boginoo
+MONGODB_ATLAS_URI=mongodb+srv://Tengis:Qweasdzxc2007@cluster0.rqv9oyq.mongodb.net/tester
 MONGODB_USER_NAME=admin-news
 MONGODB_USER_PASSWORD=admin-news
 PORT = 3333
